--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ body {
     line-height: 1.7em;
     color: #222;
     font-size: 13px;
+    font-family: 'Cinzel', serif;    
 }
 
 .main-container{
