--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,26 @@ a.button-primary {
 	flex-direction: column-reverse;
 }
 
+/*  Custom Scrollbar  */
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: antiquewhite; 
+  border-radius: 10px;
+  background-image: url("../img/scrolbarpic.svg");
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background-size: 24px;
+}
+
 /* TABLET OR SMALL DESKTOP */
 @media (min-width: 768px) {
 
