--- a/css/styles.css
+++ b/css/styles.css
@@ -209,6 +209,10 @@ a.button-primary {
 
 /*  Custom Scrollbar  */
 
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
@@ -220,7 +224,6 @@ a.button-primary {
   border-radius: 10px;
   background-image: url("../img/scrolbarpic.svg");
 }
-
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
 	background-size: 24px;
