--- a/css/styles.css
+++ b/css/styles.css
@@ -217,18 +217,19 @@ Custom Scrollbar
 
 /* width */
 ::-webkit-scrollbar {
-  width: 15px;
+  width: 13px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
   box-shadow: inset 0 0 5px grey; 
-  border-radius: 10px;
+  border-radius: 15px;
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
   background: antiquewhite; 
-  border-radius: 10px;
+  border-radius: 40%;
   background-image: url("../img/scrolbarpic.svg");
+  box-shadow: 0 0 2px grey;
 }
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
