--- a/static/global.css
+++ b/static/global.css
@@ -24,6 +24,10 @@ h1, h2, h3, h4, h5, h6 {
 	line-height: 1.2;
 }
 
+h1 > a::after, h2 > a::after, h3 > a::after, h4 > a::after, h5 > a::after, h6 > a::after {
+	content:" ";
+}
+
 a {
 	text-decoration: none;
 }
