--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -26,9 +26,9 @@ Main Styles
     box-sizing: border-box;
 }
 
-html, body{
+html, body, main {
 	height: 100%;
-	margin: 0;
+	margin: 0px;
 }
 
 body {
@@ -39,13 +39,8 @@ body {
 }
 
 .main-container {
-	display: flex;
-	flex-wrap: nowrap;
-	flex-direction: column;
-	align-items: stretch;
-	justify-content: stretch;
-	height: 100%; 
-
+    height: 100%;
+    margin: 0px;
 }
 
 .secondary-container {
@@ -80,11 +75,6 @@ body {
 }
 
 .button {
-    background-color: antiquewhite;
-    color: #000;
-    opacity: 1;
-    padding: 0.5em 2em;
-    border-radius: 5px;
     display: inline-block;
 }
 
@@ -93,41 +83,61 @@ body {
     display: block;
     padding: 0;
     margin: auto;
+}
 
+.nav-group {
+    margin: 0px;
+    padding: 0px;
 }
 
 .nav-button {
-	padding: .8rem 2rem;
-	margin: 0.2rem 0;
-	background-image: url('../img/scroll.svg');
-  background-size: cover;
-  background-position: left;
-  background-repeat: no-repeat;
-  width: 100%;
-  text-align: center;
+    margin: 0.2rem 0;
+    background-image: url('../img/scroll.svg');
+    background-size: cover;
+    background-position: left center;
+    background-repeat: no-repeat;
+    min-width: 165px;
+    max-height: 60px;
+    text-align: center;
+    padding: 0px;
+    color: rgba(0, 0, 0, 0.85);
+}
+.nav-button-logo {
+    min-width: 210px;
+    min-height: 38px;
+}
+.nav-button-link {
+    color: rgba(0, 0, 0, 0.85);
+    text-decoration: none;
+    padding: 1em 0.5em;
+    display: block;
 }
 
 a {
 	text-decoration: none;
 }
 a.button-primary {
-    background: #ddd;
     color: #000;
     display: inline-block;
     opacity: 1;
     border-radius: 5px;
     font-size: 1.2rem;
-    background-image: url('../img/button.svg');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover; 
+    background: rgb(221, 221, 221) url("../img/button.svg") no-repeat scroll center center / cover;
+    min-width: 18.7em;
+    padding: 0.5em 2em;
 }
 
 .splash-container {
-    background: #333;
-    z-index: 1;
-    overflow: hidden;
-    flex-grow: 1000;
+/*    overflow: hidden;*/
+position: relative;
+opacity: 1;
+background-attachment: fixed;
+background-position: center center;
+background-repeat: no-repeat;
+background-size: cover;
+background-color: rgb(51, 51, 51);
+min-height: 93%;
+background-size: auto;
 }
 
 .splash {
@@ -166,14 +176,17 @@ a.button-primary {
     font-weight: 100;
     border-radius: 5px;
     line-height: 1em;
+    margin: 0px 0px 0.5em;
 }
 .brief-desc {
     width: 100%;
-    color: #FFF;
+    color: rgb(255, 255, 255);
     background-color: rgba(0,0,0,.4);
     margin: auto;
     padding: 1em 0;
     border-radius: 1px;
+    font-weight: 400;
+    line-height: 1.2;
 }
 .brief-desc > p{
     margin: 0;
@@ -181,23 +194,21 @@ a.button-primary {
 }
 
 .content-wrapper {
-    flex-grow: 1;
     width: 100%;
-    min-height: 20%;
-    z-index: 2;
-    background: antiquewhite;
     left: 0;
-    background-image: url('../img/navbar.svg');
-    background-size: contain;
-    background-position: left;
-    background-repeat: repeat-x;
+    background: antiquewhite url("../img/navbar.svg") repeat-x scroll left center / contain;
+    font-weight: 300;
+    padding: 0.2em 0.5em;
+}
+ul.content-wrapper {
+    margin: 0px;
+    padding: 0px;
 }
 
 .content {
-    padding: .5rem;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: stretch;
+    padding: 0.5em 5em;
+    position: relative;
+    z-index: 1;
 }
 
 
@@ -249,12 +260,9 @@ Responsive Styles
 
     a.button-primary {
         width: 16em;
-        font-size: 1.5em;
+/*        font-size: 1.5em;*/
     }
     .nav-button {
-        padding: 1.3rem 2rem;
-        margin: 0 .5rem;
-        width: 11.5rem;
     }
 
     .splash-head {
@@ -277,13 +285,9 @@ Responsive Styles
     }
     
     .content-wrapper {
-        min-height: 10%;
     }
     
     .splash-container {
-        background: #333;
-        z-index: 1;
-        overflow: hidden;
     }
 
 }
@@ -311,9 +315,40 @@ Responsive Styles
 
 @media (max-height: 400px) {
 	.splash-container {
-		overflow: unset;
+/*		overflow: unset; */
 	}
 	.content-wrapper {
-		min-height: unset;
+/*		min-height: unset;*/
 	}
+}
+
+.separator {
+		width: 100%;
+background: antiquewhite url("../img/navbar.svg") repeat-x scroll left center / contain;
+		left: 0px;
+		min-height: 4.5em;
+		bottom: 4.5em;
+		position:relative;
+	}
+
+
+.content p, .content a, .content h1, .content h2, .content h3 {
+    color: rgb(0, 0, 0);
+    opacity: 0.85;
+}
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px 0px 0.5em;
+    font-weight: 400;
+    line-height: 1.2;
+}
+.content p, .content a {
+    font-family: Noto, Roboto, Verdana, Helvetica, Sans, sans-serif;
+}
+.content p, .content a, .content h1, .content h2, .content h3 {
+    color: rgb(0, 0, 0);
+    opacity: 0.85;
+
+}
+.content a {
+    color: rgb(66, 179, 184);
 }
