Add font cinzel to articles

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -23,6 +23,7 @@ Copyright 2021 Lenny Andreu
     <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k">
     <title>Seven Kingdoms Ancient Adversaries</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="fonts/cinzel.css">
     <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
