--- a/src/templates/article.html
+++ b/src/templates/article.html
@@ -16,33 +16,19 @@ Copyright 2021 Lenny Andreu
 -->
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seven kingdoms ancient adversaries PC game">
-    <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k">
-    <title>{$title}</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="fonts/cinzel.css">
-    <link rel="icon" href="img/favicon.png" type="image/png">
-</head>
-<body>
-<div class="main-container">
-<nav class="content-wrapper">
-    <ul class="nav-group">
-        <li class="button nav-button-logo"><a href="index.html"><img alt="Home" src="img/logo-semi-opacity.png" height=60 style="position: absolute; float: left; top: 5px;" /></a>
-        <!--<li class="button nav-button"><a class="nav-button-link" href="index.html">Home</a>-->
-	<li class="button nav-button"><a class="nav-button-link" href="play.html">Play</a>
-	<li class="button nav-button"><a class="nav-button-link" href="/forums">Forums</a>
-	<li class="button nav-button"><a class="nav-button-link" href="community.html">Community</a>
-	<li class="button nav-button"><a class="nav-button-link" href="latest.html">Downloads</a>
-    </ul>
-</nav>
-<main>
-<section class=content>
-{$article}</section>
-</main>
-</div>
-</body>
-</html>
 
+<head>
+    {$head}
+</head>
+
+<body>
+    <div class="main-container">
+        {$menu}
+        <main>
+            <section class=content>
+                {$article}</section>
+        </main>
+    </div>
+</body>
+
+</html>
