--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -16,40 +16,31 @@ Copyright 2021 Lenny Andreu
 -->
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Seven kingdoms ancient adversaries PC game">
-    <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k">
-    <title>Seven Kingdoms Ancient Adversaries</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="fonts/cinzel.css">
-    <link rel="icon" href="img/favicon.png" type="image/png">
-</head>
-<body>
-<div class="main-container">
-<nav class="content-wrapper">
-    <ul class="nav-group">
-        <!--<li class="button nav-button"><a class="nav-button-link" href="index.html">Home</a>-->
-	<li class="button nav-button"><a class="nav-button-link" href="play.html">Play</a>
-	<li class="button nav-button"><a class="nav-button-link" href="/forums">Forums</a>
-	<li class="button nav-button"><a class="nav-button-link" href="community.html">Community</a>
-	<li class="button nav-button"><a class="nav-button-link" href="latest.html">Downloads</a>
-    </ul>
-</nav>
-<main>
-<div class="splash-container" style=background-image:url(img/ingame-cut.png)>
-    <div class="splash">
-        <h1 class="splash-head"><img class="main-img" alt="Seven Kingdoms Ancient Adversaries" src="img/logo-semi-opacity.png" /></h1>
-        <h2 class="brief-desc"><p>Enter the world of intrigue and diplomacy, of trade, conquest, and espionage.</p></h2>
-        <p><a href="latest.html" class="button button-primary">Download <small>version 2.15.4p1</small></a></p>
-    </div>
-</div>
-<div class="separator"></div>
-<section class=content>
-{$article}</section>
-</main>
-</div>
-</body>
-</html>
 
+<head>
+    {$head}
+</head>
+
+<body>
+    <div class="main-container">
+        {$menu}
+        <main>
+            <div class="splash-container" style=background-image:url(img/ingame-cut.png)>
+                <div class="splash">
+                    <h1 class="splash-head"><img class="main-img" alt="Seven Kingdoms Ancient Adversaries"
+                            src="img/logo-semi-opacity.png" /></h1>
+                    <h2 class="brief-desc">
+                        <p>Enter the world of intrigue and diplomacy, of trade, conquest, and espionage.</p>
+                    </h2>
+                    <p><a href="latest.html" class="button button-primary">Download <small>version 2.15.4p1</small></a>
+                    </p>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <section class=content>
+                {$article}</section>
+        </main>
+    </div>
+</body>
+
+</html>
