--- a/src/templates/_menu.html
+++ b/src/templates/_menu.html
@@ -11,7 +11,7 @@ if (!$home) { $home_link='<li class="button nav-button-logo">
     {$home_link}
     <li class="button nav-button"><a class="nav-button-link" href="play.html">Play</a>
     <li class="button nav-button"><a class="nav-button-link" href="https://7kfans.com/forums">Forums</a>
-    <li class="button nav-button"><a class="nav-button-link" href="community/index.html">Community</a>
+    <li class="button nav-button"><a class="nav-button-link" href="community.html">Community</a>
     <li class="button nav-button"><a class="nav-button-link" href="latest.html">Downloads</a>
   </ul>
 </nav>
