--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -3,6 +3,7 @@ $render_title= 'Seven Kindoms Ancient Adversaries';
 $render_description = 'Seven Kingdoms Ancient Adversaries is the real-time strategy game designed by Trevor Chan, now
 freely available and maintained by the community.';
 if (defined $title ) { $render_title = $title; }
+if (!defined $base_path ) { $base_path = ""; }
 '';
 }
 <meta charset="utf-8">
@@ -10,9 +11,9 @@ if (defined $title ) { $render_title = $title; }
 <meta name="description" content="{$render_description}">
 <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k, rts">
 <title>{$render_title}</title>
-<link rel="stylesheet" href="css/styles.css">
-<link rel="stylesheet" href="fonts/cinzel.css">
-<link rel="icon" href="img/favicon.png" type="image/png">
+<link rel="stylesheet" href="{$base_path}css/styles.css">
+<link rel="stylesheet" href="{$base_path}fonts/cinzel.css">
+<link rel="icon" href="{$base_path}img/favicon.png" type="image/png">
 <meta property="og:title" content="{$render_title}" />
 <meta property="og:description" content="{$render_description}" />
-<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/en/3/33/Seven_Kingdoms_cover.jpg" />
+<meta property="og:image" content="{$base_path}img/favicon.png" />
