--- a/src/templates/_menu.html
+++ b/src/templates/_menu.html
@@ -1,17 +1,36 @@
 {
 $home_link = '';
-if (!$home) { $home_link='<li class="button nav-button-logo">
-  <a href="index.html">
-    <img alt="Home" src="img/logo-semi-opacity.png" height=60 style="position: absolute; float: left; top: 5px;" />
+
+if( !defined $base_path ) { $base_path = ""; }
+my @links = ();
+#pop(@links);
+# push( @links, [ 'Home', "index.html", 'img/logo-semi-opacity.png' ]);
+push( @links, [ 'Play', "play.html"]);
+push( @links, [ 'Forums', "https://7kfans.com/forums"]);
+push( @links, [ 'Community', "community.html"]);
+push( @links, [ 'Downloads', "latest.html"]);
+
+$entry_list = '';
+foreach $i (@links) {
+$entry_list .= qq{<li class="button nav-button"><a class="nav-button-link" href="$base_path$i->[1]">$i->[0]</a></li>};
+
+}
+
+if ( $home == 0) {
+$home_link= qq{
+<li class="button nav-button-logo">
+  <a href="$base_path/index.html">
+    <img alt="Home" src="$base_path/img/logo-semi-opacity.png" height=60
+      style="position: absolute; float: left; top: 5px;" />
   </a>
-</li>' ; } '' ; }
+</li>} ;
+}
+'' ;
+}
 <!-- SPACER -->
 <nav class="content-wrapper">
   <ul class="nav-group">
     {$home_link}
-    <li class="button nav-button"><a class="nav-button-link" href="play.html">Play</a>
-    <li class="button nav-button"><a class="nav-button-link" href="https://7kfans.com/forums">Forums</a>
-    <li class="button nav-button"><a class="nav-button-link" href="community.html">Community</a>
-    <li class="button nav-button"><a class="nav-button-link" href="latest.html">Downloads</a>
+    {$entry_list}
   </ul>
 </nav>
