Take the changes made from @the3dfxdude - Update readme - Update news - Update downloads - Simplify templates - Add option to gensite.pl

--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -1,19 +1,11 @@
-{
-$render_title= 'Seven Kindoms Ancient Adversaries';
-$render_description = 'Seven Kingdoms Ancient Adversaries is the real-time strategy game designed by Trevor Chan, now
-freely available and maintained by the community.';
-if (defined $title ) { $render_title = $title; }
-if (!defined $base_path ) { $base_path = ""; }
-'';
-}
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="{$render_description}">
+<meta name="description" content="{$description}">
 <meta name="keywords" content="seven kingdoms, ancient adversaries, pc, game, videogame, 7kaa, 7k, rts">
-<title>{$render_title}</title>
+<title>{$title}</title>
 <link rel="stylesheet" href="{$base_path}css/styles.css">
 <link rel="stylesheet" href="{$base_path}fonts/cinzel.css">
 <link rel="icon" href="{$base_path}img/favicon.png" type="image/png">
-<meta property="og:title" content="{$render_title}" />
-<meta property="og:description" content="{$render_description}" />
+<meta property="og:title" content="{$title}" />
+<meta property="og:description" content="{$description}" />
 <meta property="og:image" content="{$base_path}img/favicon.png" />
