--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -32,7 +32,7 @@ Copyright 2021 Lenny Andreu
                     <h2 class="brief-desc">
                         <p>Enter the world of intrigue and diplomacy, of trade, conquest, and espionage.</p>
                     </h2>
-                    <p><a href="latest.html" class="button button-primary">Download <small>version 2.15.4p1</small></a>
+                    <p><a href="download/v{$game_version}.html" class="button button-primary">Download <small>version {$game_version}</small></a>
                     </p>
                 </div>
             </div>
