Add Accanthis font

--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -5,6 +5,7 @@
 <title>{$title}</title>
 <link rel="stylesheet" href="{$base_path}css/styles.css">
 <link rel="stylesheet" href="{$base_path}fonts/cinzel.css">
+<link rel="stylesheet" href="{$base_path}fonts/accanthis.css">
 <link rel="icon" href="{$base_path}img/favicon.png" type="image/png">
 <meta property="og:title" content="{$title}" />
 <meta property="og:description" content="{$description}" />
