--- a/src/templates/_news_card.html
+++ b/src/templates/_news_card.html
@@ -1,6 +1,6 @@
-<section class="news--content">
+<article class="news--content">
   <h3 class="news--author">@{$author}</h3>
   <h2 class="news--title-primary">{$title}</h2>
   {$content}
   <div class="news--date" title="{$date}">Posted on {$date}</div>
-</section>
+</article>
