Change size of headers and paragraphs for better visual hierarchy

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -38,6 +38,21 @@ body {
     font-family: 'Cinzel', serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0px 0px 0.5em;
+    font-weight: 400;
+    line-height: 1.2;
+}
+h1 {
+    font-size: 2rem;
+}
+h2 {
+    font-size: 1.8rem
+}
+h3 {
+    font-size: 1.6rem
+}
+
 .main-container {
     height: 100%;
     margin: 0px;
@@ -353,12 +368,6 @@ Responsive Styles
     opacity: 0.85;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0px 0px 0.5em;
-    font-weight: 400;
-    line-height: 1.2;
-}
-
 .content p, .content a {
     font-family: Noto, Roboto, Verdana, Helvetica, Sans, sans-serif;
 }
@@ -369,8 +378,15 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+.content h2 {
+    font-size: 1.5rem;
+}
+.content h3 {
+    font-size: 1.4rem;
+}
+
 .content a {
-    color: rgb(66, 179, 184);
+    color: #574610
 }
 
 
@@ -388,7 +404,7 @@ h1, h2, h3, h4, h5, h6 {
     align-items: flex-start;
     padding: 1.5rem 2.4rem;
     background-color: #f5f5f5;
-    box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.4);
+    box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.2);
     margin: 1rem;
     flex: 1 600px;
 }
@@ -399,18 +415,18 @@ h1, h2, h3, h4, h5, h6 {
 
 .news--author {
     font-family: 'Cinzel', Sans;
-    font-size: .88rem;
+    font-size: 1rem !important;
     margin-bottom: 1rem;
 }
 
 .news--title-primary {
     font-family: 'Cinzel', Sans;
-    font-size: 36px;
+    font-size: 1.6rem !important;
 }
 
 .news--title-secondary {
     font-family: 'Cinzel', Sans;
-    font-size: 18px;
+    font-size: 1.13rem;
 }
 
 .news--content p {
@@ -421,6 +437,7 @@ h1, h2, h3, h4, h5, h6 {
 .news--content li,
 .news--content a {
     font-family: 'Accanthis', Sans;
+    font-size: large;
 }
 
 .news--content a {
@@ -430,4 +447,5 @@ h1, h2, h3, h4, h5, h6 {
 .news--date {
     text-align: right;
     align-self: end;
+    margin-top: auto;
 }
