--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -47,10 +47,13 @@ h1 {
     font-size: 2rem;
 }
 h2 {
-    font-size: 1.8rem
+    font-size: 1.6rem
 }
 h3 {
-    font-size: 1.6rem
+    font-size: 1.4rem
+}
+h4 {
+    font-size: 1.2rem
 }
 
 .main-container {
