--- a/src/templates/_head.html
+++ b/src/templates/_head.html
@@ -7,6 +7,6 @@
 <link rel="stylesheet" href="{$base_path}fonts/cinzel.css">
 <link rel="stylesheet" href="{$base_path}fonts/accanthis.css">
 <link rel="icon" href="{$base_path}img/favicon.png" type="image/png">
-<meta property="og:title" content="{$title}" />
-<meta property="og:description" content="{$description}" />
-<meta property="og:image" content="{$base_path}img/favicon.png" />
+<meta property="og:title" content="{$title}">
+<meta property="og:description" content="{$description}">
+<meta property="og:image" content="{$base_path}img/favicon.png">
