Remove trailing space on img Remove `<p>` from `<h2>` tag

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -28,9 +28,9 @@ Copyright 2021 Lenny Andreu
             <div class="splash-container" style=background-image:url(img/ingame-cut.png)>
                 <div class="splash">
                     <h1 class="splash-head"><img class="main-img" alt="Seven Kingdoms Ancient Adversaries"
-                            src="img/logo-semi-opacity.png" /></h1>
+                            src="img/logo-semi-opacity.png"></h1>
                     <h2 class="brief-desc">
-                        <p>Enter the world of intrigue and diplomacy, of trade, conquest, and espionage.</p>
+                       Enter the world of intrigue and diplomacy, of trade, conquest, and espionage.
                     </h2>
                     <p><a href="download/v{$game_version}.html" class="button button-primary">Download <small>version {$game_version}</small></a>
                     </p>
