Change link from menu to community Change links from community/index.md to be absolute
This is temporal while the community index gets autogenerated

--- a/src/templates/_menu.html
+++ b/src/templates/_menu.html
@@ -20,7 +20,7 @@ EOF
       <a class="nav-button-link" href="{$forum_path}forums">Forums</a>
     </li>
     <li class="button nav-button">
-      <a class="nav-button-link" href="{$base_path}community.html">Community</a>
+      <a class="nav-button-link" href="{$base_path}community/">Community</a>
     </li>
     <li class="button nav-button">
       <a class="nav-button-link" href="{$base_path}download/">Downloads</a>
