--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -467,23 +467,30 @@ Responsive Styles
     flex-direction: column;
     align-items: flex-start;
     background-color: #f5f5f5;
-    box-shadow: 1px 1px 10px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
     transition-property: box-shadow;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.19, 1, 0.22, 1);
-    margin: 1rem;
+    margin: 1rem auto;
     flex: 1 600px;
+    max-width: 650px;
+    position: relative;
+    height: 7rem;
+    justify-content: center;
 }
 
 .download--content li:hover {
-    box-shadow: 1px 1px 20px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 8px 2px rgba(0, 0, 0, 0.2);
 }
 .download--content li:active, .download--content li:focus {
-    box-shadow: 1px 1px 40px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 1px 12px 2px rgba(0, 0, 0, 0.2);
 }
 
+.download--content li em, 
 .download--content li a {
     width: 100%;
+    text-align: left;
+    padding-left: 10rem;
 }
 
 .download--content li a::before {
@@ -492,10 +499,11 @@ Responsive Styles
     width: 5rem;
     height: 5rem;
     background-clip: border-box;
-    padding: 1rem;
-    margin: 1rem;
     background-size: contain;
     background-repeat: no-repeat;
+    position: absolute;
+    left: 2.4rem;
+    top: 1rem;
 }
 .download--content li:first-child a::before {
     background-image: url("/img/windows.svg");
