Make more readable the page changing widths and paddings
Add max-width to all sections
Also add auto center
Add more padding on the top of each section

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -231,8 +231,9 @@ ul.content-wrapper {
 }
 
 .content {
-    padding: 0.5em 0em;
+    padding: 1em 2em;
     position: relative;
+    margin:auto;
     z-index: 1;
 }
 
@@ -274,7 +275,8 @@ Responsive Styles
         width: 80%
     }
     .content {
-        padding: 0.5em 5em;
+        padding: 1.5em 5em;
+        max-width: 75rem;
     }
     .content-left, .content-right {
         flex: 50%;
